<resources>

    <string name="app_name">MAPORIA</string>
    <string name="map_string">Twoja mapa do\nniezapomnianych podróży!</string>
    <string name="maporia_string">MAPORIA</string>
    <string name="signin">Zaloguj się</string>
    <string name="signup">Nie masz jeszcze konta? Zarejestruj się teraz!</string>
    <string name="title_activity_first_page">First_page_activity</string>


    <string name="login">LOGOWANIE</string>
    <string name="login2">Zaloguj się</string>
    <string name="passw">hasło</string>
    <string name="notpassw">Nie pamiętasz hasła?</string>
    <string name="email">e-mail</string>


    <string name="signup_text">REJESTRACJA</string>
    <string name="signup2">Zarejestruj się</string>
    <string name="name">Imię</string>
    <string name="username">nazwa użytkownika</string>
    <string name="lastname">Nazwisko</string>
    <string name="passwconfirm">powtórz hasło</string>
    <string name="haveaccount">Mam już konto - zaloguj się</string>


    <string name="myopinion">Moje wrażenia:</string>
    <string name="tips">Wskazówki:</string>


    <string name="add_photos">Dodaj zdjęcia</string>
    <string name="add_city">Miasto podróży</string>
    <string name="add_country">Kraj podróży</string>
    <string name="add_opinion">Opisz swoje wrażenia z podróży</string>
    <string name="date_from">od</string>
    <string name="date_to">do</string>
    <string name="date_of_trip">Termin podróży:</string>
    <string name="add_tips">Dodaj wskazówki, np. "Nie parkuj przy ul.Banacha 22"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_name">Edytuj imię</string>
    <string name="change_surname">Edytuj nazwisko</string>
    <string name="change_username">Edytuj nazwę użytkownika</string>
    <string name="change_location">Edytuj lokalizację</string>
    <string name="change_password">Zmień hasło</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="change_profil">Edytuj konto</string>
    <string name="change_img">Zmień zdjęcie</string>
    <string name="about">O mnie</string>
    <string name="about_">O mnie:</string>

    <string name="count_country">Odwiedzono krajów:</string>
    <string name="count_city">Odwiedzono miast:</string>
    <string name="count_places">Odwiedzono miejsc:</string>
    <string name="procent_world">Poznany świat: </string>

    <string name="add_place">Dodaj miejsce</string>
    <string name="add_wish">Dodaj życzenie </string>
    <string name="main_page">Strona główna</string>
    <string name="maps">Mapy</string>
    <string name="profile">Profil</string>
    <string name="wish_list">Moje życzenia</string>
    <string name="settings">Ustawienia</string>
    <string name="enter_country">Wprowadź kraj</string>
    <string name="enter_city">Wprowadź miasto:</string>
    <string name="add">Dodaj</string>
    <string name="my_trip">Moje podróże</string>


    <string name="add_photo">dodaj zdjęcie</string>


    <string name="ok">Zapisz</string>

    <string name="find">wyszukaj</string>
    <string name="sortuj">Sortuj:</string>
    <string name="filter">Filtruj</string>


    <string name="cities">Miasta</string>
    <string name="countries">Kraje</string>
    <string name="date">Data</string>
    <string name="more">Załaduj więcej</string>


</resources>