<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/bottom_news"
    android:title="@string/main_page"
    android:icon="@drawable/news_icon"
    />

    <item
        android:id="@+id/bottom_map"
        android:title="@string/maps"
        android:icon="@drawable/add_location_icon"
        />
    <item
        android:id="@+id/bottom_profile"
        android:title="@string/profile"
        android:icon="@drawable/profil_icon"
        />
    <item
        android:id="@+id/bottom_wish"
        android:title="@string/wish_list"
        android:icon="@drawable/plane_icon"
        />
    <item
        android:id="@+id/bottom_settings"
        android:title="@string/settings"
        android:icon="@drawable/setting_icon"
        />
</menu>