<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_profil_background"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EditProfilFragment">

    <!--dodac przycisk powrotu-->

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="-50dp"
        android:padding="24dp">

        <TextView
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_profil"
            android:textAlignment="center"
            android:textColor="@color/purple_dark"
            android:textSize="32sp"
            android:fontFamily="@font/afacad"
            android:textStyle="bold" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">


                <ImageView
                    android:id="@+id/change_img_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kwadrat"
                    android:paddingRight="1dp"
                    android:paddingBottom="1dp"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    />

                <TextView
                    android:id="@+id/change_img_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/change_img"
                    android:gravity="center"
                    android:textColor="@color/purple_dark"
                    android:textSize="14sp"
                    android:textStyle="italic" />


            </LinearLayout>


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_circle"
                android:hint="@string/change_name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/afacad"
                android:textColorHint="@color/purple_dark"
                android:textStyle="italic"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_circle"
                android:hint="@string/change_surname"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/afacad"
                android:textColorHint="@color/purple_dark"
                android:textStyle="italic"
                android:textSize="14sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_circle"
            android:hint="@string/change_username"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/afacad"
            android:textColorHint="@color/purple_dark"
            android:textStyle="italic"
            android:textSize="14sp" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccp_showPhoneCode="false"
            app:ccp_defaultLanguage="POLISH"
            app:ccp_padding="5dp"
            android:layout_marginTop="12dp"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="false"
           />


        <EditText
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/przycisk"
            android:hint="@string/about"
            android:fontFamily="@font/afacad"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/purple_dark"
            android:textStyle="italic"
            android:textSize="14sp"
            android:gravity="start|top"
            android:inputType="textMultiLine"/>



        <Button
            android:id="@+id/passw_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:textStyle="italic"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/change_password"
            android:fontFamily="@font/afacad"
            android:textSize="16sp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:backgroundTint="@color/purple_dark"
            android:text="@string/save_changes"
            android:fontFamily="@font/afacad"
            android:textSize="16sp"
            android:gravity="center" />


    </LinearLayout>

</LinearLayout>