<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_trip_fragm"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTripFragment">



    <!-- Tło obrazka -->
    <ImageButton
        android:id="@+id/add_headerImage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:backgroundTint="@color/orange1"
        android:src="@drawable/add"
        android:scaleType="centerInside"
    android:scaleX="3"
    android:scaleY="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/back2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:paddingLeft="-5dp"
        android:background="@drawable/bg_circle"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_headerImage">

        <!-- Dolna część z detalami i opiniami -->
        <LinearLayout
            android:id="@+id/add_detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/view_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <!-- Przykładowe miniaturki -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/listImage1"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/samolot"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    android:visibility="gone"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/listImage2"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/samolot"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    android:visibility="gone"/>


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/listImage3"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/samolot"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    android:visibility="gone"/>


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/listImage4"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/samolot"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    android:visibility="gone"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/listImage5"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/samolot"
                    app:shapeAppearanceOverlay="@style/roundImage"
                    android:visibility="gone"/>


                <!-- Dodaj więcej miniaturek w taki sam sposób -->
            </LinearLayout>
            <Button
                android:id="@+id/button_add_photos"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/afacad"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/add_photos"
                android:textColor="@color/white"
                android:textSize="14sp"
                />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/afacad"
                    android:text="@string/add_country"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/afacad"
                    app:ccp_defaultLanguage="POLISH"
                    app:ccp_showFullName="true"
                    app:ccp_showPhoneCode="false" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/add_city"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_circle"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/afacad"
                    android:hint="@string/add_city"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/afacad"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/date_of_trip"
                        android:textColor="@color/purple_dark"
                        android:lineSpacingMultiplier="0.7"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical">

                        <Button
                            android:id="@+id/add_date_from"
                            android:layout_width="125dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/bg_circle"
                            android:fontFamily="@font/afacad"
                            android:gravity="center"
                            android:hint="@string/date_from"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/afacad"
                            android:gravity="center"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/add_date_to"
                            android:layout_width="125dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/bg_circle"
                            android:fontFamily="@font/afacad"
                            android:gravity="center"
                            android:hint="@string/date_to"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <!-- Pole Moje Wrażenia -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/afacad"
                    android:text="@string/myopinion"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/star"
                        app:tint="@color/grey" />

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/star"
                        app:tint="@color/grey" />

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/star"
                        app:tint="@color/grey" />

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/star"
                        app:tint="@color/grey" />

                    <ImageView
                        android:id="@+id/star5"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:src="@drawable/star"
                        app:tint="@color/grey" />


                </LinearLayout>
            </LinearLayout>


            <EditText
                android:id="@+id/add_opinion"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/przycisk"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/afacad"
                android:gravity="start|top"
                android:hint="@string/add_opinion"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/afacad"
                android:text="@string/tips"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_tips"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/przycisk"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/afacad"
                android:gravity="start|top"
                android:hint="@string/add_tips"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <Button
                android:id="@+id/button_save"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/afacad"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>