<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    android:fontFamily="@font/afacad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/wishCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="Dodaj swoje życzenie"
            android:textColor="@color/purple_dark"
            android:textSize="28dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_height="2dp"
            android:background="@color/orange2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginVertical="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_country"
                    android:textColor="@color/purple_dark"
                    android:textSize="17dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/enterCountryWish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/orange_text"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_city"
                    android:textColor="@color/purple_dark"
                    android:textSize="17dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/enterCityWish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/orange_text"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/acceptBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@color/orange_dark_dark"
            android:text="@string/add"
            android:fontFamily="@font/afacad"
            android:textSize="17dp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Anuluj"
            android:textColor="@color/orange_dark_dark"
            android:textSize="17dp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.cardview.widget.CardView>